@@ -47,7 +47,8 @@ protected:
 	string framedroutes;		/**<The framedroutes, they are stored as a string. if there are more routes, they must be delimted by an ';'*/
 	string framedip;			/**<The framed ip.*/
 	string callingstationid;	/**<The calling station id, in this case the real ip addres of the client.*/
-	string key;					/**<A unique key to find the user in a map. It is the same like the unique identifier in the status log file (version 1) "commonname,untrusted_ip:untrusted_port"*/
+	string key;			/**<A unique key to find the user in a map. */
+        string statusfilekey;	/**<Unique identifier in the status log file (version 1) "commonname,untrusted_ip:untrusted_port"*/
 	int portnumber;				/**<The portnumber.*/
 	time_t acctinteriminterval;	/**<The acct interim interval.*/
 	string untrustedport;		/**<The untrusted port number from OpenVPN for a client.*/
@@ -77,6 +78,9 @@ public:
 	
 	string getKey(void);
 	void setKey(string);
+
+        string getStatusFileKey(void);
+	void setStatusFileKey(string);
 	
 	string getCallingStationId(void);
 	void setCallingStationId(string);
